--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                      submit
                  </button>
 
-                 <button type="button" class="form__control--btn clear hidden">
+                 <button type="button" class="form__control--btn clear ">
                    Clear item
                 </button>
 
